# Chat-Server

./: CMakeLists.txt  README.md  data.R  main.cpp
Commands/: Command.h
Database/: MediaManager.cpp  MediaManager.h  mongodb.cpp  mongodb.h
Managers/: Chat_Manager.cpp  Chat_Manager.h  User.cpp  User.h  Users_Manager.cpp  Users_Manager.h
Primitives/: Chat.cpp  Chat.h  Message.cpp  Message.h  User.h
Socket/: Client.cpp  Client.h  Crypto.h  Server.cpp  Server.h
Socket/Security/: Crypto.cpp  Crypto.h
Utils/: base64.cpp  base64.h  util.h  utils.cpp  utils.h
core/: Dispatcher.cpp  Dispatcher.h
